// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render width preview 1`] = `
<DocumentFragment>
  <form
    class="social-form"
  >
    <div
      class="row row_jc-fs row_ai-c "
    >
      <div
        class="row row_jc-c row_ai-c "
      >
        <div
          class="drop-zone "
        >
          <img
            alt="empty"
            class="empty"
            src="picture.svg"
          />
          <input
            type="file"
          />
        </div>
      </div>
      <div
        class="column   "
      >
        <div
          class="form__box row-reverse"
        >
          <input
            name="socialTitle"
            type="text"
            value=""
          />
          <label
            for="socialTitle"
          >
            Title
          </label>
        </div>
        <div
          class="form__box row-reverse"
        >
          <input
            name="socialLink"
            type="text"
            value=""
          />
          <label
            for="socialLink"
          >
            Link
          </label>
        </div>
      </div>
      <div
        class="column  column_ai-sb "
      >
        <button
          class="button default-button success-button"
        >
          Ok
        </button>
        <button
          class="button default-button danger-button"
        >
          Delete
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Render without preview 1`] = `
<DocumentFragment>
  <form
    class="social-form"
  >
    <div
      class="row row_jc-fs row_ai-c "
    >
      <div
        class="row row_jc-c row_ai-c "
      >
        <div
          class="drop-zone "
        >
          <img
            alt="empty"
            class="empty"
            src="picture.svg"
          />
          <input
            type="file"
          />
        </div>
        <div
          class="social-form__img"
        >
          <img
            alt="prview"
            src="http://localhost:3001/file/get/preview"
          />
        </div>
      </div>
      <div
        class="column   "
      >
        <div
          class="form__box row-reverse"
        >
          <input
            name="socialTitle"
            type="text"
            value=""
          />
          <label
            for="socialTitle"
          >
            Title
          </label>
        </div>
        <div
          class="form__box row-reverse"
        >
          <input
            name="socialLink"
            type="text"
            value=""
          />
          <label
            for="socialLink"
          >
            Link
          </label>
        </div>
      </div>
      <div
        class="column  column_ai-sb "
      >
        <button
          class="button default-button success-button"
        >
          Ok
        </button>
        <button
          class="button default-button danger-button"
        >
          Delete
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
